resolver comentarios